# pthread-embedded

./: CMakeLists.txt  exports.yml  global.c  implement.h  prx.c  pte_callUserDestroyRoutines.c  pte_detach.c  pte_generic_osal.h  pte_threadDestroy.c  pte_throw.c  pte_tkAssocCreate.c  pte_tkAssocDestroy.c  pthread_setspecific.c
platform/vita/: vita_osal.c
